--- a/3 pdf/Footer page/Footer page.html
+++ b/3 pdf/Footer page/Footer page.html
@@ -7,28 +7,32 @@
 </head>
 
 <body>
-    <div class="footer">
-        <div class="footer-block">
-            <div class="footer-block-inside">
-                <p>Home</p>
-                <p>About</p>
-                <p>Gallery</p>
-                <p>News</p>
+    <div class="wrapper">
+        <div class="header">FOOTER</div>
+        <div class="content">CONTENT</div>
+        <div class="footer">
+            <div class="info">
+                <div class="block">
+                    <p>Home</p>
+                    <p>About</p>
+                    <p>Gallery</p>
+                    <p>News</p>
+                </div>
+                <div class="block">
+                    <p>Bloq</p>
+                    <p>FAQ</p>
+                    <p>Contract</p>
+                    <p>Privacy & cookies</p>
+                </div>
+                <div class="block socialNetwork">
+                    <a href="#" class="fb"></a>
+                    <a href="#" class="insta"></a>
+                    <a href="#" class="youtube"></a>
+                </div>
             </div>
-            <div class="footer-block-inside">
-                <p>Bloq</p>
-                <p>FAQ</p>
-                <p>Contract</p>
-                <p>Privacy & cookies</p>
-            </div>
-            <div class="footer-block-inside">
-                <a href="#" class="fb"></a>
-                <a href="#" class="insta"></a>
-                <a href="#" class="youtube"></a>
-            </div>
+            <hr>
+            <br>
+            <p class="copyright">Compyright Company &copy; 2018 - 2019</p>
         </div>
-        <hr>
-        <br>
-        <p class="p-flooter-bottom">Compyright Company &copy; 2018 - 2019</p>
     </div>
 </body>
